--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -18,6 +18,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
       };
 
       taps = [
+        "d12frosted/emacs-plus"
         "homebrew/bundle"
         "homebrew/cask-fonts"
         "homebrew/cask-versions"
@@ -40,6 +41,17 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "curl"
         "dos2unix"
         "dotnet"
+        {
+          name = "emacs-plus";
+          args = [
+            "with-native-comp"
+            "with-imagemagick"
+            "with-xwidgets"
+            "with-mailutils"
+            "with-ctags"
+            "with-retro-sink-bw-icon"
+          ];
+        }
         "eza"
         "fd"
         "gcc"
