--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -55,23 +55,29 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "eza"
         "fd"
         "gcc"
+        "gdk-pixbuf"
         "gnutls"
         "ffmpeg"
         "fzf"
         "go"
         "gpgme"
         "grep"
+        "gsasl"
         "htop"
         "hunspell"
         "hyfetch"
         "imagemagick"
         "ispell"
+        "jansson"
+        "jpeg"
         "jq"
-        "lesspipe"
         "latexdiff"
+        "lesspipe"
         "libgccjit"
+        "librsvg"
         "llvm@18"
         "marksman"
+        "mailutils"
         "meson"
         "mono"
         "mpv"
