--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -23,6 +23,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "homebrew/cask-fonts"
         "homebrew/cask-versions"
         "homebrew/services"
+        "jorgelbg/tap"
         "osx-cross/avr"
       ];
 
@@ -89,7 +90,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "open-ocd"
         "openjdk"
         "pandoc"
-        "pinentry-mac"
+        "pinentry-touchid"
         "poppler"
         "ripgrep"
         "rsync"
