--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -90,6 +90,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "open-ocd"
         "openjdk"
         "pandoc"
+        "pinentry-mac"
         "pinentry-touchid"
         "poppler"
         "ripgrep"
