--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -60,6 +60,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "gnutls"
         "ffmpeg"
         "fzf"
+        "gnupg"
         "go"
         "gpgme"
         "grep"
