--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -190,24 +190,11 @@ Make PDFs save where in the document it was last.
 * Tools
 Install =emacs-application-framework=.
 #+begin_src emacs-lisp
-  (use-package eaf
-    :load-path "~/.config/emacs/site-lisp/emacs-application-framework"
-    :custom
-    ; See https://github.com/emacs-eaf/emacs-application-framework/wiki/Customization
-    (eaf-browser-continue-where-left-off t)
-    (eaf-browser-enable-adblocker t)
-    (browse-url-browser-function 'eaf-open-browser)
-    :config
-    (defalias 'browse-web #'eaf-open-browser)
-    (eaf-bind-key scroll_up "C-n" eaf-pdf-viewer-keybinding)
-    (eaf-bind-key scroll_down "C-p" eaf-pdf-viewer-keybinding)
-    (eaf-bind-key take_photo "p" eaf-camera-keybinding)
-    (eaf-bind-key nil "M-q" eaf-browser-keybinding)) ;; unbind, see more in the Wiki
-  (require 'eaf-browser)
-  (require 'eaf-pdf-viewer)
+  (add-to-list 'load-path "~/.emacs.d/site-lisp/emacs-application-framework/")
+  (require 'eaf)
   (require 'eaf-video-player)
-  (require 'eaf-music-player)
 #+end_src
+
 Install =esup= as a profiling tool.
 #+begin_src emacs-lisp
   (use-package esup
