--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -61,6 +61,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "ffmpeg"
         "fzf"
         "gnupg"
+        "gnupg2"
         "go"
         "gpgme"
         "grep"
