--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -254,6 +254,8 @@ Install and configure =fzf= to be used as a fuzzy finder.
 Install and configure =vterm= as a terminal emulator in Emacs.
 #+begin_src emacs-lisp
   (use-package vterm
+    :hook
+    (vterm-mode . (lambda () (display-line-numbers-mode -1)))
     :bind
     ("C-c v" . vterm))
 #+end_src
