--- a/macos.local/.flake/system/aerospace.nix.org
+++ b/macos.local/.flake/system/aerospace.nix.org
@@ -17,6 +17,14 @@ Enable Aerospace as a window manager for macOS. I have disabled gaps, move the m
         on-focus-changed = [
           "move-mouse window-lazy-center"
         ];
+        on-window-detected = [
+          {
+            "if".app-name-regex-substring = "mpv";
+            run = [
+              "layout floating"
+            ];
+          }
+        ];
         workspace-to-monitor-force-assignment = {
           "1" = "main";
           "2" = "main";
