--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -191,6 +191,11 @@ Install =esup= as a profiling tool.
     (setq esup-depth 0))
 #+end_src
 
+Disable =ls= for =dired=.
+#+begin_src emacs-lisp
+  (setq dired-use-ls-dired nil)
+#+end_src
+
 Allow multiple cursors.
 #+begin_src emacs-lisp
   (use-package multiple-cursors
@@ -216,7 +221,7 @@ Install a better PDF viewer than =DocView=.
 #+begin_src emacs-lisp
   (use-package pdf-tools
     :hook
-    (doc-view-mode . (lambda () (pdf-tools-install)))
+    (doc-view-mode . (lambda () (pdf-tools-install))) ;; install on first pdf opened instead of startup
     (pdf-view-mode . (lambda () (display-line-numbers-mode -1)))
     :init
     (add-hook 'TeX-after-compilation-finished-functions #'TeX-revert-document-buffer)
