--- a/macos.local/.flake/home/scripts/launcher.org
+++ b/macos.local/.flake/home/scripts/launcher.org
@@ -3,7 +3,5 @@
 Use =choose-gui= to launch an application. This is used for a keyboard command to launch applications.
 #+begin_src sh
   #!/bin/sh
-  app="$(ls /Applications/ /Applications/Utilities/ /System/Applications/ /System/Applications/Utilities/ ~/Applications/ | grep '\.app$' | sed 's/\.app$//g' | choose -f "SauceCodePro Nerd Font" -s 15 -b ece0c9).app"
-
-  open -n "$HOME/Applications/$app" || open -n "/Applications/$app" || open -n "/System/Applications/Utilities/$app" || open -n "/System/Applications/$app" || open -n "/Applications/Utilities/$app"
+  open -n $(find -L /Applications /System/Applications /System/Applications/Utilities ~/Applications /opt/homebrew/opt/emacs-plus@* -maxdepth 1 -name "*.app" | choose -f "SauceCodePro Nerd Font" -s 15)
 #+end_src
