--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -120,6 +120,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "calibre"
         "desmume"
         "dwarf-fortress-lmp"
+        "firefox"
         "gcc-arm-embedded"
         "ghostty"
         "gimp"
