--- a/macos.local/.flake/home/core.nix.org
+++ b/macos.local/.flake/home/core.nix.org
@@ -10,6 +10,7 @@ Set up home manager for my user account and import submodules. Define my user as
       ./fonts.nix
       ./programs/core.nix
       ./scripts/core.nix
+      ./services/core.nix
     ];
 
     home.stateVersion = "24.05";
