--- a/macos.local/.flake/home/programs/core.nix.org
+++ b/macos.local/.flake/home/programs/core.nix.org
@@ -22,6 +22,10 @@ Import configurations for programs and install programs with no configuration.
       bear
       binutils
       bison
+      cmake
+      cmake-language-server
+      curl
+      dos2unix
       gopls
       python312
       python312Packages.black
