--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -62,6 +62,12 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "osx-cross/avr/avr-binutils"
         "osx-cross/avr/avarice"
         "osx-cross/avr/avr-gcc@14"
+
+        # required by emacs-plus@30
+        "jansson"
+        "tree-sitter"
+        "jpeg"
+        "imagemagick"
       ];
 
       casks = [
