--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -64,10 +64,11 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "osx-cross/avr/avr-gcc@14"
 
         # required by emacs-plus@30
-        "jansson"
-        "tree-sitter"
-        "jpeg"
         "imagemagick"
+        "jansson"
+        "jpeg"
+        "mailutils"
+        "tree-sitter"
       ];
 
       casks = [
