--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -65,6 +65,9 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "jpeg"
         "mailutils"
         "tree-sitter"
+
+        # required by pinentry-touchid
+        "gnupg"
       ];
 
       casks = [
