--- a/macos.local/.flake/home/programs/core.nix.org
+++ b/macos.local/.flake/home/programs/core.nix.org
@@ -35,6 +35,7 @@ Import configurations for programs and install programs with no configuration.
       gpgme
       htop
       hunspell
+      hyfetch # TODO: configure
       inetutils
       ispell
       lesspipe
@@ -43,6 +44,7 @@ Import configurations for programs and install programs with no configuration.
       meson
       mpv
       ninja
+      p7zip
       pandoc
       python312
       python312Packages.black
