--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -41,18 +41,15 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
             "with-retro-emacs-logo-icon"
           ];
         }
-        "hyfetch"
-        "libgccjit"
         "librsvg"
-        "open-mpi"
-        "open-ocd"
-        "openjdk"
-        "pinentry-mac"
-        "pinentry-touchid"
-        "sevenzip"
+
+        "openjdk" # there's really no jdk for mac from nix?
+        "pinentry-touchid" # no nix version
 
         # need for grading purposes
         "avrdude"
+        "open-mpi"
+        "open-ocd"
         "osx-cross/avr/avr-binutils"
         "osx-cross/avr/avarice"
         "osx-cross/avr/avr-gcc@14"
@@ -66,6 +63,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
 
         # required by pinentry-touchid
         "gnupg"
+        "pinentry-mac"
       ];
 
       casks = [
