--- a/macos.local/.flake/home/programs/core.nix.org
+++ b/macos.local/.flake/home/programs/core.nix.org
@@ -18,6 +18,8 @@ Import configurations for programs and install programs with no configuration.
 
     home.packages = with pkgs; [
       aescrypt
+      autoconf
+      automake
       bash-language-server
       bear
       binutils
@@ -46,6 +48,8 @@ Import configurations for programs and install programs with no configuration.
       ninja
       p7zip
       pandoc
+      pkg-config
+      poppler
       python312
       python312Packages.black
       python312Packages.pylint
