--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -55,6 +55,12 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "osx-cross/avr/avarice"
         "osx-cross/avr/avr-gcc@14"
 
+        # needed for pdf-tools for emacs
+        "autoconf"
+        "automake"
+        "pkg-config"
+        "poppler"
+
         # required by emacs-plus@30
         "imagemagick"
         "jansson"
