--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -220,16 +220,16 @@ Configure and install =magit= as a =git= front end.
 
 Install a better PDF viewer than =DocView=.
 #+begin_src emacs-lisp
-  ;; (use-package pdf-tools
-  ;;   :hook
-  ;;   (doc-view-mode . (lambda () (pdf-tools-install))) ;; install on first pdf opened instead of startup
-  ;;   (pdf-view-mode . (lambda () (display-line-numbers-mode -1)))
-  ;;   :init
-  ;;   (add-hook 'TeX-after-compilation-finished-functions #'TeX-revert-document-buffer)
-  ;;   :config
-  ;;   (setq TeX-view-program-selection '((output-pdf "PDF Tools"))
-  ;;         TeX-view-program-list '(("PDF Tools" TeX-pdf-tools-sync-view))
-  ;;         TeX-source-correlate-start-server t))
+  (use-package pdf-tools
+    :hook
+    (doc-view-mode . (lambda () (pdf-tools-install))) ;; install on first pdf opened instead of startup
+    (pdf-view-mode . (lambda () (display-line-numbers-mode -1)))
+    :init
+    (add-hook 'TeX-after-compilation-finished-functions #'TeX-revert-document-buffer)
+    :config
+    (setq TeX-view-program-selection '((output-pdf "PDF Tools"))
+          TeX-view-program-list '(("PDF Tools" TeX-pdf-tools-sync-view))
+          TeX-source-correlate-start-server t))
 #+end_src
 
 Install and configure =fzf= to be used as a fuzzy finder.
