--- a/macos.local/.flake/home/programs/core.nix.org
+++ b/macos.local/.flake/home/programs/core.nix.org
@@ -20,7 +20,7 @@ Import configurations for programs and install programs with no configuration.
       aescrypt
       bash-language-server
       bear
-      binutils
+      # binutils
       bison
       cmake
       cmake-language-server
