--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -92,6 +92,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "godot"
         "inkscape"
         "krita"
+        "mmpsp"
         "multimc"
         "obs"
         "openemu"
