--- a/macos.local/.flake/home/programs/core.nix.org
+++ b/macos.local/.flake/home/programs/core.nix.org
@@ -43,6 +43,7 @@ Import configurations for programs and install programs with no configuration.
       meson
       mpv
       ninja
+      nodejs_23
       p7zip
       pandoc
       python312
