--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -84,6 +84,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "cabal"
         "calibre"
         "desmume"
+        "discord"
         "dwarf-fortress-lmp"
         "firefox"
         "gcc-arm-embedded"
