--- a/macos.local/.flake/home/programs/core.nix.org
+++ b/macos.local/.flake/home/programs/core.nix.org
@@ -60,6 +60,7 @@ Import configurations for programs and install programs with no configuration.
       wget
       yt-dlp
       zig
+      zls
     ];
   }
 #+end_src
