--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -465,6 +465,12 @@ Install =yaml-mode=.
   (use-package yaml-mode)
 #+end_src
 
+Install =zig-mode=.
+#+begin_src emacs-lisp
+  (use-pacakge zig-mode)
+#+end_src
+
+
 Set up =eglot= to run on languages that have been configured.
 #+begin_src emacs-lisp
   (global-set-key (kbd "C-c r") 'eglot-rename)
@@ -486,7 +492,8 @@ Set up =eglot= to run on languages that have been configured.
                        tex-mode-hook
                        LaTeX-mode-hook
                        yaml-mode-hook
-                       nix-mode-hook))
+                       nix-mode-hook
+                       zig-mode-hook))
     (add-hook lang-hook (lambda ()
                           (eglot-ensure)
                           (tree-sitter-mode 1)
