--- a/macos.local/.flake/home/programs/core.nix.org
+++ b/macos.local/.flake/home/programs/core.nix.org
@@ -44,6 +44,7 @@ Import configurations for programs and install programs with no configuration.
       mpv
       ninja
       nodejs_23
+      notcurses
       p7zip
       pandoc
       python312
