--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -91,6 +91,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "ghostty"
         "gimp"
         "godot"
+        "gzdoom"
         "inkscape"
         "krita"
         "mmpsp"
