--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -68,6 +68,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "jpeg"
         "libgccjit"
         "librsvg"
+        "zlib"
 
         "mailutils"
         "tree-sitter"
