--- a/macos.local/.flake/system/homebrew.nix.org
+++ b/macos.local/.flake/system/homebrew.nix.org
@@ -64,6 +64,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
 
         # required by emacs-plus@30
         "imagemagick"
+        "jansson"
         "jpeg"
         "libgccjit"
         "librsvg"
